# bash-loadable

./: .gitignore  Cargo.toml
src/: lib.rs  macros.rs  marker.rs
src/ffi/: alias.rs  array.rs  bash_owned.rs  bash_str.rs  builtin.rs  command.rs  common.rs  external.rs  mod.rs  pattern.rs  var.rs  word.rs
src/macros/: cenum.rs  cstr.rs  long_doc.rs  mod.rs  strlines.rs
src/util/: docs.rs  ffi.rs  mod.rs
