[package]
name = "bash-loadable"
description = "Simple library for making Bash loadable builtins."
authors = ["ErisianArchitect <github.com/ErisianArchitect>"]
license = "MIT"
repository = "https://github.com/ErisianArchitect/bash-loadable"
documentation = "https://docs.rs/bash-loadable"
version = "0.1.1-indev"
edition = "2024"

[dependencies]
libc = "0.2.183"
paste = "1.0.15"
